# code-next

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  claude_code_python_execution_guide.md  pyproject.toml  pyproject.toml.example
.ai/gates/: default.yaml
.ai/policies/: repo-policy.md
.ai/runbooks/: default.md
.ai/tasks/: TEMPLATE.md  demo-rp-repoprompt-flow.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-check.yml  testpypi-release.yml
docs/: INSTALL_GUIDE.md  PYTHON_IMPLEMENTATION_SPEC.md  QUICKSTART.md  REPOPROMPT_CAPABILITY_INVENTORY.md  RP_BRIDGE_DESIGN.md  RP_CAPABILITY_INVENTORY.md  RP_INTEGRATION_MATRIX.md  RP_NATIVE_PROTOCOL.md  RP_PROVIDER_GAP_ANALYSIS.md  RP_REAL_RUNTIME_VALIDATION.md  RP_REPOPROMPT_CHECKLIST.md  compatibility-policy.md
src/aiwf/: __init__.py  __main__.py  artifacts.py  cli.py  conformance.py  contracts.py  doctor.py  engine.py  exceptions.py  gates.py  loader.py  models.py  release.py  state.py
tests/: __init__.py  test_adapter_claude.py  test_adapter_codex.py  test_adapter_contracts.py  test_adapter_rp.py  test_artifacts.py  test_cli.py  test_compile.py  test_conformance_rp.py  test_doctor.py  test_engine.py  test_gates.py  test_integration.py  test_loader.py  test_models.py  test_rp_bridge_normalize.py  test_rp_cli_bridge.py  test_runbook_strategy.py  test_state.py  test_versioning.py
tools/rp-cli-stub/: README.md  pyproject.toml
tools/rp-cli-stub/src/rp_cli_stub/: __init__.py  cli.py
(+23 files in other folders)
